Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50499

QTextCharFormat::SpellCheckUnderline not displayed correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 5.4.1, 5.5.1
    • None
    • Windows 8.1 with Qt 5.5.1, Ubuntu 15.04 with Qt 5.4.1
    • 88e6f8cff2974c46b1262f3a1a61e1440c664e0c

      When a text in a QTextEdit is underlined with QTextCharFormat::SpellCheckUnderline, that underline vanishes for large font sizes (the minimal font size for it to vanish seems to be font-dependent). See attached minimal working example and the screenshot (left). This is reproducible on both Windows and Linux.

      Curiously, QTextCharFormat::WaveUnderline seems to work, although with a few issues on Linux: for large font sizes, it is partially clipped at the bottom (screenshot (middle)), whereas for small font sizes it can overlap the text (screenshot (right)).

        1. clipped-underline.cpp
          0.5 kB
          Stefan Löffler
        2. screenshot.png
          38 kB
          Stefan Löffler
        3. Screen Shot 2017-10-19 at 8.21.15 AM.png
          53 kB
          Gabriel de Dietrich (drgvond)
        For Gerrit Dashboard: QTBUG-50499
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            st.loeffler Stefan Löffler
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes