Fix disappearing spellcheck underline with some fonts/font sizes in Qt 5

Reported at http://tug.org/pipermail/texworks/2016q1/006405.html
Caused by https://bugreports.qt.io/browse/QTBUG-50499